--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.8.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
